add feature image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ header:
   caption:
 excerpt: 'A flexible two-column Jekyll theme. Perfect for personal sites, blogs, and portfolios hosted on GitHub or your own server.'
 feature_row:
-  - image_path: mm-customizable-feature.png
+  - image_path: /assets/images/feature.png
     alt: "customizable"
     title: "Super Customizable"
     excerpt: "Everything from the menus, sidebars, comments, and more can be configured or set with YAML Front Matter."
